--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,23 @@
 /** ====|| Common CSS Start ||==== **/
 @font-face{
     font-family: 'Uber Move', sans-serif;
+    font-weight: 700;
     src: url(../fonts/UberMove-Bold.ttf);
+}
+@font-face{
+    font-family: 'Uber Move', sans-serif;
+    font-weight: 500;
+    src: url(../fonts/UberMove-Medium.ttf);
+}
+@font-face{
+    font-family: 'Uber Move', sans-serif;
+    font-weight: 400;
+    src: url(../fonts/UberMove-Regular.ttf);
+}
+@font-face{
+    font-family: 'Uber Move', sans-serif;
+    font-weight: 300;
+    src: url(../fonts/UberMove-Light.ttf);
 }
 /* Font Integration End */
 
@@ -49,6 +65,33 @@ p{
 }
 .small-font{
     font-size: 14px;
+}
+.common-padding{
+    padding: 80px 0;
+}
+.play-icon{
+    width: 82px;
+    height: 82px;
+    font-size: 52px;
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    padding-left: 5px;
+    cursor: pointer;
+    right: 30px;
+    bottom: 30px;
+    background-color: #0376F9;
+    border: 4px solid #0376F9;
+    border-radius: 100%;
+    transition: .3s;
+}
+.play-icon:hover{
+    background-color: #fff;
+    color: #0376F9;
+}
+.our-fleets .owl-theme .owl-dots {
+    display: none !important; 
+    visibility: hidden !important;
 }
 /** ====|| Common CSS Start ||==== **/
 
@@ -131,3 +174,131 @@ p{
     color: #0376F9;
 }
 /** ====|| Service Section End ||==== **/
+
+
+/** ====|| Why Us Section Start ||==== **/
+
+/** ====|| Why Us Section End ||==== **/
+
+/** ====|| Our Fleets Section Start ||==== **/
+.blue-bg{
+    background-color: #0376F9;
+}
+.our-fleets img{
+    height: 250px;
+}
+.our-fleets .owl-theme .owl-nav button.owl-prev:hover{
+    background: none !important;
+}
+.our-fleets .owl-theme .owl-nav button.owl-next{
+    position: absolute;
+    top: 30%;
+    right: -5%;
+    outline: 0;
+}
+.our-fleets .owl-theme .owl-nav button.owl-prev{
+    position: absolute;
+    top: 30%;
+    left: -5%;
+    outline: 0;
+}
+.our-fleets .owl-theme .owl-nav button.owl-next:hover{
+    background: none;
+}
+.our-fleets .owl-theme .owl-nav button.owl-prev span{
+    font-size: 45px;
+    font-weight: 500;
+    color: #fff;
+}
+.our-fleets .owl-theme .owl-nav button.owl-next span{
+    font-size: 45px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.owl-item.active:nth-child(2){
+    width: 600px !important;
+}
+/** ====|| Our Fleets Section End ||==== **/
+
+/** ====|| Clients Section Start ||==== **/
+.client-bg {
+    background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("/images/client-bg.png");
+    background-repeat: no-repeat;
+    background-position: top center;
+    padding: 20px 0 80px 0;
+}
+.bg-black-color {
+    background-color: #101010;
+}
+.person .item img{
+    width: 100px;
+    height: 100px;
+}
+ .owl-dots {
+    display: none !important; 
+    visibility: hidden;
+}
+.person.owl-theme .owl-nav button.owl-prev:hover{
+    background: none !important;
+}
+.person.owl-theme .owl-nav button.owl-next{
+    position: absolute;
+    top: 30%;
+    right: -5%;
+    outline: 0;
+}
+.person.owl-theme .owl-nav button.owl-prev{
+    position: absolute;
+    top: 30%;
+    left: -5%;
+    outline: 0;
+}
+.person.owl-theme .owl-nav button.owl-next:hover{
+    background: none;
+}
+.person.owl-theme .owl-nav button.owl-prev span{
+    font-size: 45px;
+    font-weight: 500;
+    color: #fff;
+}
+.person.owl-theme .owl-nav button.owl-next span{
+    font-size: 45px;
+    font-weight: 500;
+    color: #fff;
+}
+.client-item{
+    margin: 0 auto;
+    width: 60% !important;
+}
+/** ====|| Clients Section End ||==== **/
+
+
+/** ====|| CTA Section Start ||==== **/
+
+.cta-left{
+    background-image: url("/images/continuous-line-woman.svg");
+    background-position: left bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.cta-right{
+    background-image: url("/images/private-car.svg");
+    background-position: right bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.cta-text{
+    margin-top: -290px;
+}
+
+/** ====|| CTA Section End ||==== **/
+
+/** ====|| Footer Section Start ||==== **/
+.footer-top{
+    background-color: #101010;
+}
+.footer-bottom, .footer-section{
+    background-color: #060606;
+}
+/** ====|| Footer Section End ||==== **/
