--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ header.nav-fixed {
     background-color:#0A0E10;
     box-shadow: 5px -1px 12px -5px grey;
 }
+.navbar-toggler:focus{
+    box-shadow: none !important;
+    outline: 0 !important;
+}
+
 /** ====|| Navbar Section End ||==== **/
 
 /** ====|| Banner Section Start ||==== **/
@@ -228,8 +233,8 @@ header.nav-fixed {
     color: #fff;
 }
 
-.owl-item.active:nth-child(2){
-    width: 600px !important;
+.our-fleets .fleets-img img{
+    width: 90%;
 }
 /** ====|| Our Fleets Section End ||==== **/
 
