--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ header.nav-fixed {
 
 /** ====|| Banner Section Start ||==== **/
 .banner-bg{
-    background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("/images/hero.png");
+    background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("/images/hero.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
