Little color change & project done

--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,9 @@ header.nav-fixed {
     margin: 0 auto;
     width: 60% ;
 }
+.service-title{
+    color: #3A494E;
+}
 /** ====|| Clients Section End ||==== **/
 
 
